# PhenoFusion3D

./: .gitignore  3D_recons.py  3D_reconstruction.ipynb  README.md  imp_positions.txt  main.py  pyproject.toml  requirements.txt  rospy_thread_fin_1.py  test_with_whole_seq.py
app/: capture_worker.py  controller.py  main_window.py  quality_worker.py  worker.py
app/panels/: capture_panel.py  data_panel.py  gantry_panel.py  log_panel.py  metrics_panel.py  quality_panel.py
capture/: __init__.py  base.py  gantry.py  realsense_capture.py  ros_capture.py
file_io/: exporter.py  loader.py
install/: README.md  build_appimage.sh  install_linux.sh  install_windows.ps1
install/appimage/: entrypoint.sh  phenofusion3d.desktop  requirements.txt
phenofusion3d/: __init__.py
phenofusion3d/app/: __init__.py  controller.py  main_window.py  processing_worker.py
phenofusion3d/app/panels/: __init__.py  controls_panel.py  data_panel.py  log_panel.py  metrics_panel.py
phenofusion3d/io/: __init__.py  exporter.py  loader.py
phenofusion3d/processing/: __init__.py  icp.py  rgbd.py  utils.py
phenofusion3d/visualiser/: __init__.py  viewer.py
processing/: icp.py  quality.py  reconstructor.py  registration_agent.py
tests/: smoke_reconstructor.py  test_gantry_offline.py  test_registration_agent.py
visualiser/: viewer.py
